fix: retornando para realizar separadamente cada classe